--- a/app/src/main/res/layout/namaji_mosque_search.xml
+++ b/app/src/main/res/layout/namaji_mosque_search.xml
@@ -5,16 +5,19 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tv_welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_margin="20dp"
-        android:text="In This Page All Information of mosque Will be Displayed. Like MosqueName/MosqueLocation/so on....And can be editable too"
+        android:text="WELCOME"
         android:textSize="20sp" />
 
 
     <Button
-        android:id="@+id/btn_logout"
+        android:id="@+id/btn_nearby_mosque"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Logout" />
+        android:layout_gravity="center"
+        android:text="Mosque Around You" />
 </LinearLayout>
