--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,5 +37,11 @@
     <color name="green">#00B669</color>
     <color name="green_light">#15F797</color>
 
+    <!--for seekBar-->
+    <color name="default_screen_bg">#f9f9f9</color>
+    <color name="rounded_container_bg">#222222</color>
+    <color name="rounded_container_border">#3b3f44</color>
+    <color name="light_gray_header_color">#646663</color>
+
 
 </resources>
