--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,7 +34,7 @@
     <color name="iron">#CCCCCC</color>
 
 
-    <color name="green">#00B669</color>
+    <color name="green">#f61f9b0c</color>
     <color name="green_light">#15F797</color>
 
     <!--for seekBar-->
