--- a/app/src/main/res/layout/dialog_search.xml
+++ b/app/src/main/res/layout/dialog_search.xml
@@ -83,7 +83,7 @@
             android:layout_height="0dp"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.7"
-            android:text="34%"
+            android:text="20 meters"
             android:textColor="@color/black"
             android:textSize="18sp" />
 
