--- a/app/src/main/res/layout/favourite_mosque.xml
+++ b/app/src/main/res/layout/favourite_mosque.xml
@@ -5,12 +5,13 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/list_search"
+        android:id="@+id/list_fav"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:dividerHeight="2dp"
-        android:footerDividersEnabled="true"
-        android:layout_height="wrap_content">
+        android:footerDividersEnabled="true">
 
     </ListView>
+
 
 </RelativeLayout>
