--- a/app/src/main/res/layout/list_search.xml
+++ b/app/src/main/res/layout/list_search.xml
@@ -1,28 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="60dp"
     android:gravity="center_vertical"
-    android:layout_height="60dp">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/mosque_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="7"
+        android:gravity="center_vertical"
         android:padding="5dp"
         android:text="Product Name"
-        android:layout_centerVertical="true"
         android:textColor="#123456"
         android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/mosque_distance"
-        android:layout_width="wrap_content"
+
+    <RelativeLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
-        android:text="Shapon"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
-</RelativeLayout>
+        android:layout_weight="3">
+
+        <TextView
+            android:id="@+id/mosque_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_alignParentRight="true"
+            android:gravity="center_vertical"
+            android:text="Shapon"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
+    </RelativeLayout>
+
+
+</LinearLayout>
 
