--- a/app/src/main/res/layout/namaji_mosque_search.xml
+++ b/app/src/main/res/layout/namaji_mosque_search.xml
@@ -1,23 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?><!-- This is the fragment  to be displayed for a section associated with a tab -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:orientation="vertical">
+
+
+    <ImageView
+        android:id="@+id/salat_logo"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/salat_logo"/>
 
     <TextView
         android:id="@+id/tv_welcome"
+        android:layout_below="@+id/salat_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerHorizontal="true"
         android:layout_margin="20dp"
         android:text="WELCOME"
         android:textSize="20sp" />
 
-
-    <Button
-        android:id="@+id/btn_nearby_mosque"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Mosque Around You" />
-</LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_margin="20dp">
+
+        <Button
+            android:id="@+id/btn_nearby_mosque"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:textColor="@color/rounded_container_bg"
+            android:text="Mosque Around You" />
+
+        <Button
+            android:id="@+id/btn_find_by_name"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:textColor="@color/rounded_container_bg"
+            android:text="Find By Name" />
+
+        <Button
+            android:id="@+id/btn_next_jamat"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:textColor="@color/rounded_container_bg"
+            android:text="Next Jamat" />
+
+    </LinearLayout>
+
+
+</RelativeLayout>
