--- a/app/src/main/res/layout/dialog_search_nearby.xml
+++ b/app/src/main/res/layout/dialog_search_nearby.xml
@@ -60,7 +60,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="10dp"
             android:layout_weight="0.7"
-            android:text="Notification Range (in miters)"
+            android:text="Notification Range (in km)"
             android:textColor="@color/black"
             android:textSize="16sp" />
 
@@ -71,7 +71,7 @@
             android:layout_height="0dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
-            android:max="200"
+            android:max="400"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:progress="10"
@@ -83,7 +83,7 @@
             android:layout_height="0dp"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.7"
-            android:text="20 meters"
+            android:text="20 km"
             android:textColor="@color/black"
             android:textSize="18sp" />
 
