--- a/app/src/main/res/layout/activity_namaji_register.xml
+++ b/app/src/main/res/layout/activity_namaji_register.xml
@@ -76,6 +76,26 @@
 
         </android.support.design.widget.TextInputLayout>
 
+        <!--  Password Label -->
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/password_ed_2"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/rounded_edittext"
+                android:hint="Re-Type Password"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:paddingLeft="10dp"
+                android:textColor="@color/black">
+
+            </EditText>
+
+        </android.support.design.widget.TextInputLayout>
+
 
         <Button
             android:id="@+id/btn_signup"
