--- a/app/src/main/res/layout/namaji_mosque_search.xml
+++ b/app/src/main/res/layout/namaji_mosque_search.xml
@@ -10,6 +10,7 @@
         android:id="@+id/salat_logo"
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"
         android:src="@drawable/salat_logo"/>
 
