--- a/app/src/main/res/layout/favourite_mosque.xml
+++ b/app/src/main/res/layout/favourite_mosque.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@drawable/background"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
+
+
+    <TextView
+        android:id="@+id/tv_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="All your bookmarked mosques will be visible here"
+        android:textSize="25sp" />
 
     <ListView
+        android:layout_below="@+id/tv_info"
         android:id="@+id/list_fav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
